--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4",
+        "beberlei/assert": "~2.1",
         "gdbots/common-php": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.3"
     },
     "autoload": {
         "psr-0": { "Gdbots\\Messages\\": "src/" }
