--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
     "homepage": "https://github.com/gdbots/messages-php",
     "description": "Protobuf inspired message tools for php.",
     "type": "library",
-    "license": "MIT",
+    "license": "Apache-2.0",
     "require": {
         "php": ">=5.4",
         "beberlei/assert": "~2.1",
-        "gdbots/common-php": "dev-master"
+        "gdbots/common-php": "dev-master",
+        "moontoast/math": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3"
