--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,21 @@
 {
-    "name": "gdbots/messages-php",
-    "homepage": "https://github.com/gdbots/messages-php",
-    "description": "Protobuf inspired message tools for php.",
-    "type": "library",
-    "license": "Apache-2.0",
-    "require": {
-        "php": ">=5.4",
-        "beberlei/assert": "~2.1",
-        "gdbots/common-php": "dev-master",
-        "moontoast/math": "~1.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.3"
-    },
-    "autoload": {
-        "psr-0": { "Gdbots\\Messages\\": "src/" }
+  "name": "gdbots/messages-php",
+  "homepage": "https://github.com/gdbots/messages-php",
+  "description": "Protobuf inspired message tools for php.",
+  "type": "library",
+  "license": "Apache-2.0",
+  "require": {
+    "php": ">=5.4",
+    "beberlei/assert": "~2.1",
+    "gdbots/common-php": "dev-master",
+    "moontoast/math": "~1.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.3"
+  },
+  "autoload": {
+    "psr-0": {
+      "Gdbots\\Messages\\": "src/"
     }
+  }
 }
