--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
   "require": {
     "php": ">=5.4",
     "beberlei/assert": "~2.1",
-    "gdbots/common-php": "dev-master",
-    "moontoast/math": "~1.1"
+    "gdbots/common-php": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3"
