--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
   "require-dev": {
     "phpunit/phpunit": "~4.3"
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1-dev"
+    }
+  },
   "autoload": {
     "psr-0": {
       "Gdbots\\Pbj\\": "src/"
