--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "php": ">=5.4",
     "ext-bcmath": "*",
     "beberlei/assert": "~2.1",
-    "gdbots/common-php": "~0.1"
+    "gdbots/common-php": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3"
