--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     "symfony/yaml": "~2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3"
+    "phpunit/phpunit": "~4.3",
+    "ruflin/elastica": "~1.4.3"
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2-dev"
+      "dev-master": "0.2.x-dev"
     }
   },
   "autoload": {
