--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3",
+    "aws/aws-sdk-php": "~2.8",
     "ruflin/elastica": "~1.4.3"
   },
   "extra": {
