--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./tests/bootstrap.php" colors="true">
+  <php>
+    <!-- required for integration tests -->
+    <env name="AWS_KEY" value=""/>
+    <env name="AWS_SECRET" value=""/>
+    <env name="DYNAMODB_TABLE" value="pbj_tests"/>
+
+    <env name="ELASTICA_HOST" value=""/>
+    <env name="ELASTICA_PORT" value="9200"/>
+    <env name="ELASTICA_INDEX" value="pbj_tests"/>
+  </php>
 
   <testsuites>
     <testsuite name="Gdbots">
