--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,12 +6,12 @@ engines:
     enabled: true
     config:
       file_extensions: 'php'
-      standard: 'PSR1,PSR2'
+      standard: 'PSR1,PSR2,PSR4'
   phpmd:
     enabled: true
     config:
       file_extensions: 'php'
-      rulesets: 'unusedcode'
+      rulesets: 'cleancode,codesize,design,naming,unusedcode'
 
 ratings:
   paths:
