--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
   "require": {
     "php": ">=5.6",
     "ext-bcmath": "*",
-    "beberlei/assert": "~2.1",
-    "gdbots/common": "~0.1.2",
-    "symfony/yaml": "~2.6|~3.0"
+    "beberlei/assert": "~2.4",
+    "gdbots/common": "~1.0",
+    "symfony/yaml": "~3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3",
