--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "ext-bcmath": "*",
     "beberlei/assert": "~2.4",
     "gdbots/common": "~1.0",
+    "moontoast/math": "~1.1",
+    "ramsey/uuid": "~3.1",
     "symfony/yaml": "~3.0"
   },
   "require-dev": {
