--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
     "php": ">=5.6",
     "ext-bcmath": "*",
     "beberlei/assert": "~2.4",
-    "gdbots/common": "~1.0",
+    "gdbots/common": "~1.1",
+    "moontoast/math": "~1.1",
+    "ramsey/uuid": "~3.5",
     "symfony/yaml": "~3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3",
-    "aws/aws-sdk-php": "~3.0",
-    "ruflin/elastica": "~3.0"
+    "aws/aws-sdk-php": "~3.18",
+    "ruflin/elastica": "~3.2"
   },
   "autoload": {
     "psr-4": {
@@ -28,7 +30,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.x-dev"
+      "dev-master": "1.1.x-dev"
     }
   }
 }
