re #38 Validate message type against anyOf only, not class name.
+ updated all uses of a classname to use php ::class constant.
+ changed `Gdbots\Pbj\Marshaler\Elastica\MappingFactory` to use `anyOfClassNames`

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
       "Gdbots\\Tests\\Pbj\\": "tests"
     }
   },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  },
   "extra": {
     "branch-alias": {
       "dev-master": "1.1.x-dev"
