--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,18 @@
   "type": "library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.1",
     "ext-bcmath": "*",
-    "beberlei/assert": "~2.4",
+    "beberlei/assert": "~2.7",
     "gdbots/common": "~1.1",
     "moontoast/math": "~1.1",
-    "ramsey/uuid": "~3.5",
-    "symfony/yaml": "~3.0"
+    "ramsey/uuid": "~3.7",
+    "symfony/yaml": "~3.3|~4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3",
-    "aws/aws-sdk-php": "~3.18",
-    "ruflin/elastica": "~3.2"
+    "phpunit/phpunit": "~6.4",
+    "aws/aws-sdk-php": "~3.38",
+    "ruflin/elastica": "~5.3"
   },
   "autoload": {
     "psr-4": {
@@ -33,7 +33,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.1.x-dev"
+      "dev-master": "2.0.x-dev"
     }
   }
 }
