--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,16 @@
   "require": {
     "php": ">=7.1",
     "ext-bcmath": "*",
-    "beberlei/assert": "~2.7",
-    "gdbots/common": "~1.1",
-    "moontoast/math": "~1.1",
-    "ramsey/uuid": "~3.7",
-    "symfony/yaml": "~3.3|~4.0"
+    "beberlei/assert": "^2.7",
+    "gdbots/common": "^1.1",
+    "moontoast/math": "^1.1",
+    "ramsey/uuid": "^3.7",
+    "symfony/yaml": "^3.3 || ^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.4",
-    "aws/aws-sdk-php": "~3.38",
-    "ruflin/elastica": "~5.3"
+    "phpunit/phpunit": "^6.4",
+    "aws/aws-sdk-php": "^3.38",
+    "ruflin/elastica": "^5.3"
   },
   "autoload": {
     "psr-4": {
