--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
   "type": "library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.4",
     "ext-bcmath": "*",
-    "beberlei/assert": "^2.7 || ^3.0",
+    "ext-json": "*",
+    "beberlei/assert": "^3.2",
     "gdbots/common": "^1.1",
     "moontoast/math": "^1.1",
-    "ramsey/uuid": "^3.7",
-    "symfony/yaml": "^3.3 || ^4.0"
+    "ramsey/uuid": "^3.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.4",
