--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
     "ext-bcmath": "*",
     "ext-json": "*",
     "beberlei/assert": "^3.2",
+    "brick/math": "^0.8",
     "gdbots/common": "^1.1",
-    "moontoast/math": "^1.1",
-    "ramsey/uuid": "^3.7"
+    "ramsey/uuid": "^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.4",
-    "aws/aws-sdk-php": "^3.38",
-    "ruflin/elastica": "^5.3"
+    "phpunit/phpunit": "^9.1",
+    "aws/aws-sdk-php": "^3.138",
+    "ruflin/elastica": "^7.0.0-beta.4"
   },
   "autoload": {
     "psr-4": {
