--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "php": ">=8.1",
     "ext-bcmath": "*",
     "ext-json": "*",
-    "beberlei/assert": "^3.2",
-    "brick/math": "^0.11",
-    "ramsey/uuid": "^4.0"
+    "beberlei/assert": "^3.3",
+    "brick/math": "^0.11 || ^0.12",
+    "ramsey/uuid": "^4.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
